--- a/Introduction/index.html
+++ b/Introduction/index.html
@@ -26,10 +26,13 @@ a:hover {
     display: block; /* 消除默认的底边距 */    
     border: none; /* 移除边框 */    
 }  
-    }  
-        p {  
-            text-indent: 2em; /* 首行缩进2个字符的宽度，这里使用了'em'单位，它是相对于当前字体大小的 */  
-        }  	
+p {  
+	text-indent: 2em; /* 首行缩进2个字符的宽度，这里使用了'em'单位，它是相对于当前字体大小的 */  
+	font-size: 36px; /* 改为较小的字体大小以便于查看 */  
+}  	
+h2 {  
+	font-size: 42px; /* 改为较小的字体大小以便于查看 */  
+}  
   .comment {  
 
     font-style: italic; /* 斜体 */  
