--- a/index.html
+++ b/index.html
@@ -66,9 +66,12 @@ a:hover {
         <tr>  
             <th><a href="Introduction/">欢迎来到馒嘟云平台！</a></th>  
             <td>2024年5月3日</td>  
-            <!-- 可以添加更多<th>和<td>来构建完整的表格 -->  
         </tr>  
-        <!-- 添加更多<tr>来构建表格的其余部分 -->  
+        <tr>  
+            <th><a href="Introduction/2024051801/">致歉</a></th>  
+            <td>2024年5月18日</td>  
+        </tr> 
+	<!-- 添加更多<tr>来构建表格的其余部分 -->  
     </table>  
 </div>
   
