--- a/life/index.html
+++ b/life/index.html
@@ -69,7 +69,7 @@ a:hover {
 <div class="table-center">  
     <table>  
         <tr>  
-            <th><a href="">社团文化节</a></th>  
+            <th><a href="2024050501/">社团文化节</a></th>  
             <td>2024年5月5日</td>  
             <!-- 可以添加更多<th>和<td>来构建完整的表格 -->  
         </tr>  
