--- a/title.html
+++ b/title.html
@@ -3,7 +3,15 @@
 <head>    
 <meta charset="utf-8">    
 <title>标题</title>    
-<style>    
+<style>
+body {  
+    margin: 0;  
+    padding: 0;  
+}  
+  
+h1.header-center {  
+    margin-top: 0.0;  
+}
 .header-center {    
     text-align: center; /* 使标题居中 */    
     margin-bottom: 5px; /* 标题与表格之间的间距 */
@@ -57,14 +65,13 @@ a:hover {
 }    
 </style>    
 </head>    
-<body>    
-    
+<body>  
 <h1 class="header-center">馒嘟云平台</h1>    
     
 <div class="table-center">    
     <table>
         <tr>  
-            <td class="table-cell"><a href="/" target="_top">首页</a></td>  
+            <td class="table-cell"><a href="index.html" target="_top">首页</a></td>  
             <td class="table-cell"><a href="study/index.html" target="_top">学习</a></td>  
             <td class="table-cell"><a href="life/index.html" target="_top">生活</a></td>  
             <td class="table-cell"><a href="video/from.html" target="_top">视频</a></td>  
