--- a/title.html
+++ b/title.html
@@ -71,9 +71,9 @@ a:hover {
 <div class="table-center">    
     <table>
         <tr>  
-            <td class="table-cell"><a href="index.html" target="_top">首页</a></td>  
-            <td class="table-cell"><a href="study/index.html" target="_top">学习</a></td>  
-            <td class="table-cell"><a href="life/index.html" target="_top">生活</a></td>  
+            <td class="table-cell"><a href="/" target="_top">首页</a></td>  
+            <td class="table-cell"><a href="study/" target="_top">学习</a></td>  
+            <td class="table-cell"><a href="life/" target="_top">生活</a></td>  
             <td class="table-cell"><a href="video/from.html" target="_top">视频</a></td>  
         </tr>  
     </table>  
