--- a/404.html
+++ b/404.html
@@ -16,6 +16,6 @@ a:hover {
 </head>
 
 <body>
-	<h1><a href="/">404页面未找到。点击此处转跳至首页。</a></h1>
+	<h1><a href="/">404 Not found.页面未找到。点击此处转跳至首页。</a></h1>
 </body>
 </html>
