--- a/404.html
+++ b/404.html
@@ -11,11 +11,24 @@ a {
 a:hover {  
     text-decoration: none; /* 鼠标悬停时也不显示下划线 */  
 }  
+        footer {  
+            background-color: #333;  
+            color: white;  
+            text-align: center;  
+            padding: 10px 0;  
+            position: absolute;  
+            bottom: 0;  
+            width: 100%;  
+            height: 50px; /* 页脚的高度 */  
+        }  
 </style>  
 <title>404页面未找到</title>
 </head>
 
 <body>
 	<h1><a href="/">404 Not found.页面未找到。点击此处转跳至首页。</a></h1>
+<footer>  
+    <p>快乐的馒嘟 2022-2024</p>  
+</footer>  
 </body>
 </html>
