--- a/Introduction/index.html
+++ b/Introduction/index.html
@@ -71,7 +71,7 @@ h2 {
     <h2>感谢与期待</h2>  
     <p>感谢你的访问和关注！如果你对我的云平台有任何建议或意见，请随时与我联系。我期待着与你交流，共同分享生活中的点滴美好！</p>  	
 	
-	<p class="comment">此欢迎词由AI生成</p>  
+	<p class="comment">此欢迎词由AI协助创作</p>  
 	
     <h4>E-mail:happymandu2022@outlook.com</h4>  	
 
