--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@ a:hover {
             <td>2024年5月3日</td>  
         </tr>  
         <tr>  
+            <th><a href="time/">时间屏幕</a></th>  
+            <td>2024年8月3日</td>  
+        </tr>
+        <tr>  
             <th><a href="Introduction/2024051801/">致歉</a></th>  
             <td>2024年5月18日</td>  
         </tr> 
