--- a/study/index.html
+++ b/study/index.html
@@ -71,7 +71,10 @@ a:hover {
         <tr>  
             <th><a href="ncee-countdown/">高考倒计时</a></th>  
             <td>2024年5月25日</td>  
-            <!-- 可以添加更多<th>和<td>来构建完整的表格 -->  
+        </tr> 
+        <tr>  
+            <th><a href="https://jd22phy3.github.io/time/">其它倒计时</a></th>  
+            <td>2024年6月9日</td>  
         </tr>  
         <!-- 添加更多<tr>来构建表格的其余部分 -->  
     </table>  
