--- a/title.html
+++ b/title.html
@@ -66,7 +66,7 @@ a:hover {
 </style>    
 </head>    
 <body>  
-<h1 class="header-center">馒嘟云平台</h1>    
+<h1 class="header-center">快乐的馒嘟</h1>    
     
 <div class="table-center">    
     <table>
