--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>  
 <head>  
 <meta charset="utf-8">  
-<title>馒嘟云平台</title>  
+<title>快乐的馒嘟</title>  
 <style>    
 a {    
     color: inherit; /* 继承父元素的颜色 */    
