--- a/study/index.html
+++ b/study/index.html
@@ -73,8 +73,8 @@ a:hover {
             <td>2024年5月25日</td>  
         </tr> 
         <tr>  
-            <th><a href="https://jd22phy3.github.io/time/">其它倒计时</a></th>  
-            <td>2024年6月9日</td>  
+            <th><a href="countdown/">其它倒计时</a></th>  
+            <td>2024年8月14日</td>  
         </tr>  
         <!-- 添加更多<tr>来构建表格的其余部分 -->  
     </table>  
