--- a/study/countdown/index.html
+++ b/study/countdown/index.html
@@ -20,7 +20,7 @@
         <h1 id="countdown6"></h1>
     </div>
     <div class="countdown-container">
-        <h2>高考</h2>
+        <h2>2025年6月高考</h2>
         <h1 id="countdown5"></h1>
     </div>
 
