--- a/study/countdown/index.html
+++ b/study/countdown/index.html
@@ -23,6 +23,10 @@
         <h2>2025年6月高考</h2>
         <h1 id="countdown5"></h1>
     </div>
+    <div class="countdown-container">
+        <h2>2025年6月高考结束</h2>
+        <h1 id="countdown7"></h1>
+    </div>
 
     <script src="script.js"></script>
 </body>
