--- a/index.html
+++ b/index.html
@@ -72,10 +72,9 @@ a:hover {
             <td>2024年8月3日</td>  
         </tr>
         <tr>  
-            <th><a href="Introduction/2024051801/">致歉</a></th>  
-            <td>2024年5月18日</td>  
+            <th>停更备战高考！</th>  
+            <td>2024年10月19日</td>  
         </tr> 
-	<!-- 添加更多<tr>来构建表格的其余部分 -->  
     </table>  
 </div>
   
