--- a/study/index.html
+++ b/study/index.html
@@ -69,6 +69,10 @@ a:hover {
 <div class="table-center">  
     <table>  
         <tr>  
+            <th><a href="/pomodoro/">番茄钟</a></th>  
+            <td>2025年5月2日</td>  
+        </tr>  
+        <tr>  
             <th><a href="ncee-countdown/">高考倒计时</a></th>  
             <td>2024年5月25日</td>  
         </tr> 
@@ -76,6 +80,10 @@ a:hover {
             <th><a href="countdown/">其它倒计时</a></th>  
             <td>2024年8月14日</td>  
         </tr>  
+        <tr>  
+            <th><a href="https://github.com/happymandu/SchoolBell/releases">上下课铃声</a></th>  
+            <td>2024年7月8日</td>  
+        </tr>
         <!-- 添加更多<tr>来构建表格的其余部分 -->  
     </table>  
 </div>
