--- a/life/index.html
+++ b/life/index.html
@@ -69,8 +69,8 @@ a:hover {
 <div class="table-center">  
     <table>  
         <tr>  
-            <th><a href="2024050501/">404</a></th>  
-            <td>NotFound</td>  
+            <th><a href="https://mp.weixin.qq.com/mp/appmsgalbum?__biz=MzE5ODgxMjU2NA==&action=getalbum&album_id=4107159651794436104#wechat_redirect">2025暑假旅行</a></th>  
+            <td>2025年8月5日</td>  
             <!-- 可以添加更多<th>和<td>来构建完整的表格 -->  
         </tr>  
         <!-- 添加更多<tr>来构建表格的其余部分 -->  
