--- a/study/index.html
+++ b/study/index.html
@@ -73,11 +73,7 @@ a:hover {
             <td>2025年5月2日</td>  
         </tr>  
         <tr>  
-            <th><a href="ncee-countdown/">高考倒计时</a></th>  
-            <td>2024年5月25日</td>  
-        </tr> 
-        <tr>  
-            <th><a href="countdown/">其它倒计时</a></th>  
+            <th><a href="countdown/">倒计时</a></th>  
             <td>2024年8月14日</td>  
         </tr>  
         <tr>  
